--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -7,4 +7,4 @@ block content
         a(href=routes.editVideo(video.id)) Edit Video
         h5.video__title=video.title
         span.video__views=video.views
-        p.video__description=video_description
+        p.video__description=video.description
