--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,10 +1,12 @@
 doctype html
 html
-    head
+    header
         script(src="https://kit.fontawesome.com/c4c0c87d90.js", crossorigin="anonymous")
         title #{pageTitle} | #{siteName}
+        link(rel="stylesheet", href="/static/styles.css")
     body
         include ../partials/header
         main
             block content
         include ../partials/footer
+        script(src="/static/main.js")
