--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -24,8 +24,9 @@ block content
                 span.video__comment-number 1 comment
             else
                 span.video__commernt-number #{video.comments.length} comments
-            from.add__comment#jsAddComment
+            form.add__comment#jsAddComment
                 input(type="text", placeholder="Add a comment")
             ul.video__comments-list
                 each comment in video.comments
-                    span comment.text
+                    li
+                        span=comment.text
