--- a/assets/js/scss/pages/videoDetail.scss
+++ b/assets/js/scss/pages/videoDetail.scss
@@ -38,7 +38,7 @@
     .video__comment-number {
       font-size: 18px;
     }
-    .add_comment {
+    .add__comment {
       margin-top: 25px;
       width: 100%;
       input {
